Fix burger menu visibility on desktop

--- a/src/index.css
+++ b/src/index.css
@@ -561,10 +561,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (min-width: 1200px) {
-  .sidebar-toggle.burger-menu {
-    display: none;
-  }
-
   .sidebar-overlay {
     display: none;
   }
